--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:theme="@style/Theme.TheSweetOven"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".onboard_page.ImageSliderActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".auth.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".auth.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".splash_page.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
