--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TheSweetOven"
         tools:targetApi="31">
         <activity
-            android:name=".home.HomeActivity"
+            android:name=".ui.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".onboard_page.ImageSliderActivity"
